--- a/src/views/admins/admin.ejs
+++ b/src/views/admins/admin.ejs
@@ -20,7 +20,7 @@
                     <div class="card h-100 border-0">
                         <img src="/icon/edit.svg" class="card-img-top is-72 mx-auto" alt="...">
                         <div class="card-body text-center">
-                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/table" role="text">Editar Secciones</a>
+                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/admin/table" role="text">Editar Secciones</a>
                             <p class="card-text text-grey">Crear o eliminar secciones e imágenes de la pantalla principal.</p>
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                     <div class="card h-100 border-0">
                         <img src="/icon/file-text.svg" class="card-img-top is-72 mx-auto" alt="...">
                         <div class="card-body text-center">
-                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/phrases" role="text">Sumar Frases</a>
+                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/admin/phrases" role="text">Sumar Frases</a>
                             <p class="card-text text-grey">Sumar y borrar frases de la pantalla principal.</p>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                     <div class="card h-100 border-0">
                         <img src="/icon/archive.svg" class="card-img-top is-72 mx-auto" alt="...">
                         <div class="card-body text-center">
-                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/files" role="text">Cargar Archivos</a>
+                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/admin/files" role="text">Cargar Archivos</a>
                             <p class="card-text text-grey">Cargar y borrar archivos de la base de datos.</p>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                     <div class="card h-100 border-0">
                         <img src="/icon/package.svg" class="card-img-top is-72 mx-auto" alt="...">
                         <div class="card-body text-center">
-                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/newContent" role="text">Crear Contenidos</a>
+                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/admin/newContent" role="text">Crear Contenidos</a>
                             <p class="card-text text-grey">Crear o eliminar contenidos de las secciones.</p>
                         </div>
                     </div>
