--- a/src/views/admins/phrases.ejs
+++ b/src/views/admins/phrases.ejs
@@ -16,7 +16,7 @@
 
             <!-- Carga de frase nueva -->
             <div class="row m-auto">
-                <form class="d-flex flex-column" action="/super/savePhrase" method="POST">
+                <form class="d-flex flex-column" action="/admin/savePhrase" method="POST">
                     <div class="row mb-3 mx-0 input-group">
                         <label class="col-2 col-lg-1 col-form-label">Frase</label>
                         <div class="col-10 col-lg-11 p-0">
@@ -37,7 +37,7 @@
                     </div>
                     
                     <div class="mb-3 btn-group ms-auto">
-                        <a class="btn btn-light shadow is-3" href="/super/view" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="position-absolute top-50 start-50 translate-middle" alt="Volver"></a>
+                        <a class="btn btn-light shadow is-3" href="/admin" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="position-absolute top-50 start-50 translate-middle" alt="Volver"></a>
                         <button type="reset" class="btn btn-light shadow is-3" title="Borrar"><img src="/icon/wind.svg" class="position-absolute top-50 start-50 translate-middle" alt="Borrar"></button>
                         <button type="submit" class="btn btn-light shadow is-3" title="Guardar"><img src="/icon/save.svg" class="position-absolute top-50 start-50 translate-middle" alt="Guardar"></button>
                     </div>
