--- a/src/views/admins/adminTable.ejs
+++ b/src/views/admins/adminTable.ejs
@@ -42,8 +42,8 @@
 
             <div class="d-flex flex-column">
                 <div class="mb-3 btn-group ms-auto">
-                        <a class="btn btn-light shadow is-3" href="/super/view" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="position-absolute top-50 start-50 translate-middle" alt="Volver"></a>
-                        <a class="btn btn-light shadow is-3" role="button" href="/super/newSection" title="Añadir Producto"><img src="/icon/plus-circle.svg" class="position-absolute top-50 start-50 translate-middle" alt="Añadir Producto"></a>
+                        <a class="btn btn-light shadow is-3" href="/admin" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="position-absolute top-50 start-50 translate-middle" alt="Volver"></a>
+                        <a class="btn btn-light shadow is-3" role="button" href="/admin/newSection" title="Añadir Producto"><img src="/icon/plus-circle.svg" class="position-absolute top-50 start-50 translate-middle" alt="Añadir Producto"></a>
                 </div>
             </div>
 
