--- a/src/views/partials/button.ejs
+++ b/src/views/partials/button.ejs
@@ -1,1 +1,1 @@
-<a role="button" href="/super/view" class="btn rounded-circle shadow m-4 p-0 position-fixed bottom-0 end-0 highlight is-3" title="Super Sesión"><img class="position-absolute top-50 start-50 translate-middle" src="/icon/user.svg"></a>
+<a role="button" href="/admin" class="btn rounded-circle shadow m-4 p-0 position-fixed bottom-0 end-0 highlight is-3" title="Super Sesión"><img class="position-absolute top-50 start-50 translate-middle" src="/icon/user.svg"></a>
