--- a/src/views/web/category.ejs
+++ b/src/views/web/category.ejs
@@ -18,11 +18,11 @@
             <% if(categoryContents.length > 0) { %>
                 <div class="row justify-content-around">
                     <% for( let i = 0; i < categoryContents.length; i++ ) { %>
-                        <div class="card my-3 shadow p-0 card-flotante" style="width: 34rem;">
+                        <div class="card my-3 shadow p-0 card-flotante col-12 col-md-6">
                             <a href="/<%= sectionToShow.routeS %>/<%= categoryContents[i].id %>">
                                 <div class="row g-0">
                                     <div class="col-md-4 position-relative">
-                                        <img src="./img/contents/<%= categoryContents[i].img %>" class="float-start img-responsive w-100 rounded-start" alt="...">
+                                        <img src="./images/contents/<%= categoryContents[i].img %>" class="float-start img-responsive w-100 rounded-start" alt="...">
                                         <div class="position-absolute bottom-0 w-100">
                                             <p class="card-text tiny text-center m-2 bg-light bg-opacity-25 rounded"><small class="">Photo by <a class="link-dark" href="<%= categoryContents[i].autorLinkImg %>"><%= categoryContents[i].autorImg %></a> on <a class="link-dark" href='https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>Unsplash</a></small></p>
                                         </div>
@@ -30,7 +30,7 @@
                                     <div class="col-md-8 h-100">
                                         <div class="card-body row h-100 position-relative">
                                             <h5 class="card-title col-12 fs-3"><%= categoryContents[i].title %></h5>
-                                            <p class="card-text text-truncate col-12"><%= categoryContents[i].description %></p>
+                                            <p class="card-text truncate col-12"><%= categoryContents[i].description %></p>
                                         </div>
                                     </div>
                                 </div>
