--- a/src/views/web/content.ejs
+++ b/src/views/web/content.ejs
@@ -11,12 +11,14 @@
         <div class="container mt-6 p-0">
 
             <!-- Inicio Container -->
-            <img src="./img/contents/<%= contentToShow.img %>" class="float-start img-responsive w-100 rounded-start" alt="...">
-            <div class="position-absolute bottom-0 w-100">
-                <p class="card-text tiny text-center m-2 bg-light bg-opacity-25 rounded"><small class="">Photo by <a class="link-dark" href="<%= contentToShow.autorLinkImg %>"><%= contentToShow.autorImg %></a> on <a class="link-dark" href='https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>Unsplash</a></small></p>
+            <div class="vh-50 position-relative d-block">
+                <img src="/images/contents/<%= contentToShow.img %>" class="vh-50 fit img-responsive w-100" alt="...">
+                <div class="position-absolute bottom-0 end-0">
+                    <p class="card-text tiny text-center m-2 bg-light bg-opacity-25 rounded"><small class="">Photo by <a class="link-dark" href="<%= contentToShow.autorLinkImg %>"><%= contentToShow.autorImg %></a> on <a class="link-dark" href='https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>Unsplash</a></small></p>
+                </div>
             </div>
-            <h1 class="mt-3 text-center"><%= contentToShow.title %></h1>
-            <p class="my-2"><%= contentToShow.description %></p>
+            <h1 class="my-4 text-yellow text-center"><%= contentToShow.title %></h1>
+            <p class="mb-4 content"><%= contentToShow.description %></p>
             <!-- Fin Container -->
         </div>
 
