Corrección de truncate. Se sumo iframe de strava.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,7 +99,12 @@ body {
 /* Text
 ----------------------------------------------------------------------------------------*/
 .truncate {
-    white-space: nowrap;
+    display: block;
+    display: -webkit-box;
+    height: 20px * 1.4 * 3;
+    line-height: 1.4;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
 }
