--- a/src/views/admins/files.ejs
+++ b/src/views/admins/files.ejs
@@ -22,6 +22,12 @@
                         </div>
                     </div>
                     <div class="row mb-3 mx-0 input-group">
+                        <label class="col-2 col-form-label">Descripción</label>
+                        <div class="col-10 p-0">
+                            <input name="description" type="text" class="form-control shadow" required>
+                        </div>
+                    </div>
+                    <div class="row mb-3 mx-0 input-group">
                         <label class="col-2 col-form-label">Categoría</label>
                         <div class="col-10 p-0">
                             <input name="category" type="text" class="form-control shadow" required>
