--- a/src/views/web/category.ejs
+++ b/src/views/web/category.ejs
@@ -38,6 +38,10 @@
                         </div>
                     <% } %>
                 </div>
+            <% } %>
+
+            <% if(sectionToShow.routeS == "kayaking") { %> 
+                <iframe height='405' width='590' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/activities/6917136323/embed/e3d7c71fb122fd9b1ec3ffab37c6f21e6169b8a8'></iframe>
             <% } %> 
 
             <!-- Archivos disponibles -->
@@ -46,8 +50,8 @@
                     <% for (let i = 0; i < categoryFiles.length; i++) { %> 
                         <li class="list-group-item d-flex">
                             <p class="m-0 p-0 flex-grow-1 align-self-center"><%= categoryFiles[i].name %></p>
-                            <p class="m-0 p-0 flex-grow-1 align-self-center"><%= categoryFiles[i].category %></p>
-                            <a type="button" class="btn btn-sm my-auto" title="Descargar" aria-label="Eliminar" href="<%= categoryFiles[i].link %>" target="_blank"><img src="/icon/download-cloud.svg" class="is-24" alt="Descargar"></a>
+                            <p class="m-0 p-0 flex-grow-1 align-self-center"><%= categoryFiles[i].description %></p>
+                            <a type="button" class="btn btn-sm my-auto" title="Descargar" aria-label="Descargar" href="<%= categoryFiles[i].link %>" target="_blank"><img src="/icon/download-cloud.svg" class="is-24" alt="Descargar"></a>
                         </li>
                     <% } %> 
                 </ul>
