--- a/public/stylesheets/styleColors.css
+++ b/public/stylesheets/styleColors.css
@@ -56,8 +56,8 @@
 /* Input 
 ----------------------------------------------------------------------------------------*/
 input:focus:focus-within {
-  outline:rgba(255, 180, 31, 0.8) solid 0.25rem;
-  border: rgba(255, 180, 31, 0.5) solid 0.1rem;
+  /*outline:rgba(255, 180, 31, 0.8) solid 0.25rem;*/
+  border: rgba(255, 180, 31, 0.5) solid 1px;
   transition: 1s;
 }
 
@@ -65,8 +65,8 @@ input:focus:focus-within {
 /* Textarea 
 ----------------------------------------------------------------------------------------*/
 textarea:focus:focus-within {
-  outline:rgba(255, 180, 31, 0.8) solid 0.25rem;
-  border: rgba(255, 180, 31, 0.5) solid 0.1rem;
+  /*outline:rgba(255, 180, 31, 0.8) solid 0.25rem;*/
+  border: rgba(255, 180, 31, 0.5) solid 1px;
   transition: 1s;
 }
 
