--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -44,14 +44,14 @@
                             <input name="password" type="password" class="form-control shadow" required>
                         </div>
                     </div>
+                    <div class="form-check align-self-center me-3">
+                        <input class="form-check-input" name="remember" type="checkbox">
+                        <label class="form-check-label" for="remember">
+                            Recordarme
+                        </label>
+                    </div>
                     
                     <div class="mb-3 btn-group mx-auto mt-4">
-                        <div class="form-check align-self-center me-3">
-                            <input class="form-check-input" type="checkbox" value="" id="remember">
-                            <label class="form-check-label" for="remember">
-                                Recordarme
-                            </label>
-                        </div>
                         <a class="btn btn-light shadow alt3rem" href="/" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="color-light" alt="Volver"></a>
                         <button type="reset" class="btn btn-light shadow alt3rem" title="Borrar"><img src="/icon/wind.svg" class="color-light" alt="Borrar"></button>
                         <button type="submit" class="btn btn-light yellowLink shadow alt3rem" title="Iniciar Sesión">Iniciar Sesión</button>
